# Trekar_grebek

./: .env.temlate  .gitignore  README.MD  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habits/: models.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_place.py  0004_habit_is_active_habit_last_executed_and_more.py
telegram_bot/: bot.py  tasks.py  tests.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py
