pip freeze > requirements.txt[tool.poetry]
name = "trekar-grebek"
version = "0.1.0"
description = ""
authors = ["Виктор <viktor.dubov.2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
